namespace packageBase.input
{
    /// <summary>
    /// Enum to represent the different player input types.
    /// </summary>
    public enum PlayerInputTypes
    {
        Move
    }

    /// <summary>
    /// Enum to represent the different menu input types.
    /// </summary>
    public enum MenuInputTypes
    {
        Point,
        LeftClick,
        MiddleClick,
        RightClick,
        ScrollWheel,
        Move,
        Submit,
        Cancel
    }
}
